# escode

./: .gitignore  LICENSE  README.md  SConstruct  __test__.py  decoder.h  encoder.h  escode.c  escode.h  number.h  pyproject.toml  setup.py  strbuf.h
benchmark/: README  README.md  RUNTRIALS.sh  analyze.py  benchmark.py  generate.py  initialize.py  requirements.txt
include/: constants.h  decoder.h  encoder.h  escode.h  eshead.h  mypython.h  stack.h  strbuf.h
include/core/: constants.h  eshead.h  htonll.h  intlib.h  mympdecimal.h  mypython.h  strbuf.h
include/py3c/: compat.h  py3shims.h
tests/: __init__.py  test_array.py  test_binary.py  test_boolean.py  test_datetime.py  test_dec.py  test_errors.py  test_float.py  test_index.py  test_int.py  test_limits.py  test_multi.py  test_random_tree.py  test_roundtrip.py  test_string.py
