[tool]

[tool.enscons]
name = "escode"
version = "3.0.1"
description = "ESCODE binary serialization"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C"
]
author = "Akhil Wable"
author_email = "akhil.wable@gmail.com"
url = "https://github.com/awable/escode"
license = "MIT"
requires-python = ">=3.11"
install_requires = []

src_root = ""

[build-system]
requires = ["pytoml>=0.1", "enscons"]
build-backend = "enscons.api"
